# fartcentral

./: Cargo.toml  README.md  kick.ts  package-lock.json  package.json  tsconfig.json  warns.json
src/: config.ts  deploy-commands-now.ts  deploy-commands.ts  index.ts  main.rs
src/commands/: ban.ts  index.ts  kick.ts  mod.rs  rock.rs  rps.rs  timeout.ts
src/modules/: colorize.ts  hexer.ts
